@@ -6,6 +6,7 @@ ver 0.20.15 (not yet released)
   - fix crash when restoring mounts with incompatible database plugin
 * Android
   - build without Ant
+  - fix for SIGSYS crash
 
 ver 0.20.14 (2018/01/01)
 * database
